[package]
name = "tepra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clipboard-win = "4.5.0"
pathobj = { git = "https://github.com/sugarflowers/pathobj.git" }
binaryfile = { git = "https://github.com/sugarflowers/binaryfile.git" }
regex = "1.8.3"
